Implemented write/view article functionality

--- a/UI/Scholarly.Web.Client/src/app/feature/components/about-us/about-us.component.html
+++ b/UI/Scholarly.Web.Client/src/app/feature/components/about-us/about-us.component.html
@@ -9,9 +9,9 @@
           </div>
             <div class="basic-info">
                 <ul class="text-start list-group list-group-flush">
-                    <li class="list-group-item border-0"><fa-icon [icon]="faIcons.workExperience"></fa-icon>Developer</li>
-                    <li class="list-group-item border-0"><fa-icon [icon]="faIcons.address"></fa-icon>Cambridge</li>
-                    <li class="list-group-item border-0"><fa-icon [icon]="faIcons.email"></fa-icon>{{user.email}}</li>
+                    <li class="list-group-item border-0">Developer</li>
+                    <li class="list-group-item border-0">Cambridge</li>
+                    <li class="list-group-item border-0">{{user.email}}</li>
                 </ul>
             </div>
         </div>
@@ -19,17 +19,17 @@
     <!-- right section -->
     <div class="col-lg-8 text-start">
       <div class="work-experience shadow-sm information-tile px-3">
-          <h2><fa-icon [icon]="faIcons.workExperience"></fa-icon>Work Experience</h2>
+          <h2>Work Experience</h2>
           <div *ngFor="let we of user.workExperiences" class="work-experience-item">
             <div class="position">
               <span class="position-name">{{we.position}}</span> - 
               <span class="company-name">{{we.companyName}}</span>
             </div>
             <div class="date">
-              <fa-icon [icon]="faIcons.date"></fa-icon>{{we.startDt.toLocaleDateString()}} - {{we.endDt.toLocaleDateString()}}
+              {{we.startDt.toLocaleDateString()}} - {{we.endDt.toLocaleDateString()}}
             </div>
             <div class="skillsUsed">
-              <fa-icon [icon]="faIcons.skills"></fa-icon>{{we.skillsUsed}}
+              {{we.skillsUsed}}
             </div>
             <div class="description">
               {{we.description}}
@@ -37,17 +37,17 @@
           </div>
         </div>
         <div class="education shadow-sm information-tile px-3">
-          <h2><fa-icon [icon]="faIcons.education"></fa-icon>Education</h2>
+          <h2>Education</h2>
           <div class="education-item" *ngFor="let e of user.educations">
             <div class="course">
               <span class="course-name">{{e.educationName}} </span> -
               <span class="course-level">{{e.level}}</span>
             </div>
             <div class="field-of-study">
-              <fa-icon [icon]="faIcons.fieldOfStudy"></fa-icon>{{e.fieldOfStudy}}
+              {{e.fieldOfStudy}}
             </div>
             <div class="education-date">
-              <fa-icon [icon]="faIcons.date"></fa-icon>{{e.startDt.toLocaleDateString()}} - {{e.endDt.toLocaleDateString()}}
+              {{e.startDt.toLocaleDateString()}} - {{e.endDt.toLocaleDateString()}}
             </div>
             <div class="education-description">
               {{e.description}}
