--- a/UI/Scholarly.Web.Client/src/app/app.component.html
+++ b/UI/Scholarly.Web.Client/src/app/app.component.html
@@ -1,10 +1,12 @@
 <div class="container-fluid">
-    <div>
-        <div class="container">
+    <div class="row">
+        <div class="col-12">
             <top-navigation></top-navigation>
         </div>
     </div>
-    <div class="container">
-        <router-outlet></router-outlet>
+    <div class="row">
+        <div class="col-12">
+            <router-outlet></router-outlet>
+        </div>
     </div>
 </div>
