--- a/UI/Scholarly.Web.Client/src/app/core/components/top-navigation/top-navigation.component.html
+++ b/UI/Scholarly.Web.Client/src/app/core/components/top-navigation/top-navigation.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm shadow">
+<nav class="navbar navbar-expand-sm shadow fixed-top bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="javascript:void(0)">Logo</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
@@ -10,7 +10,7 @@
             <a class="nav-link" href="javascript:void(0)">Link</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="javascript:void(0)">Link</a>
+            <a class="nav-link" routerLink="article" routerLinkActive="active" ariaCurrentWhenActive="page">View article</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="aboutus" routerLinkActive="active" ariaCurrentWhenActive="page">About me</a>
