--- a/UI/Scholarly.Web.Client/src/app/core/components/top-navigation/top-navigation.component.html
+++ b/UI/Scholarly.Web.Client/src/app/core/components/top-navigation/top-navigation.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm shadow fixed-top bg-light">
+<nav class="navbar navbar-expand-sm shadow bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="javascript:void(0)">Logo</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
