--- a/UI/Scholarly.Web.Client/src/app/feature/article/components/write-article/write-article.component.html
+++ b/UI/Scholarly.Web.Client/src/app/feature/article/components/write-article/write-article.component.html
@@ -1,3 +1,6 @@
+<button class="btn btn-primary" type="button" (click)="openContent()">
+    Open
+</button>
 <div class="row">
     <div id="write-article" class="mt-5 mx-auto border border-1 rounded shadow-sm col-6 p-3">
         <div class="header">
@@ -23,9 +26,6 @@
             <div>
                 <textarea style="height: 1000px;" formControlName="description" class="form-control col-12"></textarea>
             </div>
-            <div>
-                <input type="button" value="Upload" (click)="openUploader()">
-            </div>
             <div class="col-12 text-end">
                 <input type="submit" value="Add" class="btn btn-default">
             </div>
@@ -39,21 +39,14 @@
         <view-article [article]="writeArticleForm.value"></view-article>
     </div>
 </div>
-<!-- <div class="row mt-4" *ngIf="uploadedData.length > 0">
-    <div class="col-6">
-        <table class="table">
-            <thead>
-                <th class="w-25"></th>
-                <th class="w-50">Selector</th>
-                <th class="w-25"></th>
-            </thead>
-            <tbody>
-                <tr *ngFor="let data of uploadedData;">
-                    <td><img [src]="data.url" alt="Image uploaded" style="width: 100%;"></td>
-                    <td>{{data.title}}</td>
-                    <td>del</td>
-                </tr>
-            </tbody>
-        </table>
+<!-- <div class="article-content">
+    <div class="modal-header">
+        <h4 class="modal-title">
+            Heading
+        </h4>
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
+    </div>
+    <div class="modal-body">
+        <p>this is some content</p>
     </div>
 </div> -->
