--- a/UI/Scholarly.Web.Client/src/app/shared/components/image-uploader/image-uploader.component.html
+++ b/UI/Scholarly.Web.Client/src/app/shared/components/image-uploader/image-uploader.component.html
@@ -1,38 +1,29 @@
-<!-- <div class="modal">
-    <div class="modal-dialog">
-        <div class="modal-content"> -->
-            <form [formGroup]="form" (ngSubmit)="onSubmit()">
-            <div class="modal-header">
-                <h4>Upload Image</h4>
-            </div>
-            <div class="modal-body">
-                <div class="row">
-                    <div class="col-sm-12">
-                            <div class="mb-3 mt3">
-                                <label class="form-label">Selector</label>
-                                <input type="text" class="form-control" formControlName="selector" name="selector">
-                            </div>
-                            <div class="mb-3 mt3">
-                                <label class="form-label">Caption</label>
-                                <input type="text" class="form-control" formControlName="caption" name="caption">
-                            </div>
-                            <div class="mb-3">
-                                <label class="form-label">Image</label>
-                                 <input type="file" value="Upload" formControlName="image" (change)="onFileSelected($event)">
-                            </div>
-                        
-                    </div>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button data-bs-dismiss="modal" type="submit">Save</button>
-                <!-- <button data-bs-dismiss="modal" (click)="uploadImages()">Save</button> -->
-                <button type="button" data-bs-dismiss="modal">Cancel</button>
-            </div>
-        </form>
-        <!-- </div>
+<form [formGroup]="form" (ngSubmit)="onSubmit()">
+    <div class="modal-header">
+        <h4>Upload Image</h4>
     </div>
-</div> -->
+    <div class="modal-body">
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="mb-3 mt3">
+                    <label class="form-label">Selector</label>
+                    <input type="text" class="form-control" formControlName="selector" name="selector">
+                </div>
+                <div class="mb-3 mt3">
+                    <label class="form-label">Caption</label>
+                    <input type="text" class="form-control" formControlName="caption" name="caption">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">Image</label>
+                    <input type="file" value="Upload" formControlName="image" (change)="onFileSelected($event)">
+                </div>
 
-
-
+            </div>
+        </div>
+    </div>
+    <div class="modal-footer">
+        <button type="submit">Save</button>
+        <!-- <button data-bs-dismiss="modal" (click)="uploadImages()">Save</button> -->
+        <button type="button">Cancel</button>
+    </div>
+</form>
